--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -145,6 +145,12 @@
                         <li>Karin Verspoor, PhD, University of Melbourne, Australia</li>
                         <li>Pierre Zweigenbaum, PhD, France</li>
                     </ul>
+                    <p class="quote-content"><strong><span style="text-decoration: underline;">Publication committee: </span></strong></p>
+                    <ul class="quote-content">
+                        <li>Yaoyun Zhang, PhD, The University of Texas Health Science Center at Houston, US</li>
+                        <li>Yanshan Wang, PhD, Mayo Clinic, US</li>
+                    </ul>
+
                 </div>
             </div>
         </div>
@@ -173,7 +179,7 @@
                 <div class="widget-header">
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Submission and Review</h2>
-<p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair<span style="color: #0000ff;"> (link here)</span>. For more information, please read the detailed submission instructions<span style="color: #0000ff;"> (link here)</span>.</p>
+                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://easychair.org/my/conference.cgi?conf=healthnlp2018">link here</a></span> ). For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html" >link here</a></span>).</p>
 <p  class="quote-content">All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers and posters will be primarily based on the potential to generate discussion and impact future research directions. Accepted papers will be included in the ICHI 2018 Proceedings and IEEE Digital Library. Plans are underway to also invite authors of selected papers to publish an extended version of their work in a special issue of BMC Medical Informatics and Decision Making journal.</p>
                     </div>
                 </div>
@@ -196,6 +202,7 @@
                                 <td>
                                     <ul class="quote-content" style="padding-left:0; list-style: none; margin-top:-20px">
                                         <li><h3 style="font-size: 22px;margin-left:20px;color:#fff">Hua Xu<a class="contact-a" href="mailto:Hua.Xu@uth.tmc.edu">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;email me</a></h3></li>
+                                        <li><h3 style="font-size: 22px;margin-left:20px;color:#fff">VG Vinod Vydiswaran<a class="contact-a" href="mailto:vgvinodv@umich.edu">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;email me</a></h3></li>
                                     </ul>
                                 </td>
                             </tr>
