--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -55,8 +55,8 @@
                         <ul id="menu-prmiary" class="navbar-menu">
 <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item home"><a href="#">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="#introduction">Introduction</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page topics"><a href="#topics">Topic</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="#organization">Organizaters</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page topics"><a href="#topics">Topics</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="#organization">Organizers</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="#dates">Important dates</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="#submissions">Submissions</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="#contact">Contact Us</a></li>
@@ -71,11 +71,11 @@
             <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
                 <div class="carousel-inner" role="listbox" id="item-img">
                     <div class="item active">
-                        <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/n1.jpg" alt>
+                        <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/NY3.png" alt>
                     </div>
-                    <div class="item">
-                        <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/n2.jpg" alt>
-                    </div>
+                    <!-- div class="item">
+                        <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/NY2.png" alt>
+                    </div -->
                     <!-- <div class="item"> -->
                     <!-- img src="" -->
                     <!-- <img class="carousel-item-img" src="./Forest.jpg"> -->
@@ -83,7 +83,7 @@
                 </div>
                 <ol class="carousel-indicators" style="bottom:50px">
                     <li data-target="#hero-carousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#hero-carousel" data-slide-to="1"></li>
+                    <!--li data-target="#hero-carousel" data-slide-to="1"></li -->
                 </ol>
             </div>
         </div>
@@ -91,8 +91,7 @@
         <div id="text" class="widget widget-description">
             <div class="container">
                 <div class="col-md-8 col-md-push-2">
-                    <h2 class="widget-heading">The first International Workshop on <h2>
-                    <h2 class="widget-heading">Health Natural Language Processing (HealthNLP 2018)</h2>
+                    <h2 class="widget-heading">The first International Workshop on Health Natural Language Processing (HealthNLP 2018)</h2>
                     <h3 class="widget-sub-heading">Organized in conjunction with IEEE ICHI 2018</h3>
                     <h3 class="widget-sub-heading">June 4th, 2018, New York City, USA</h3>
                 </div>
@@ -131,7 +130,7 @@
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Chairs: </span></strong></p>
                     <ul class="quote-content">
                         <li>Hua Xu, PhD, The University of Texas Health Science Center at Houston, US</li>
-                        <li>G.Vinod Vydiswaran, PhD, University of Michigan, US</li>
+                        <li>V.G.Vinod Vydiswaran, PhD, University of Michigan, US</li>
                     </ul>
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Steering committee: </span></strong></p>
                     <ul class="quote-content">
@@ -179,7 +178,7 @@
                 <div class="widget-header">
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Submission and Review</h2>
-                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://easychair.org/my/conference.cgi?conf=healthnlp2018">link here</a></span> ). For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html" >link here</a></span>).</p>
+                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://easychair.org/my/conference.cgi?conf=healthnlp2018">link here</a></span>). For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html" >link here</a></span>).</p>
 <p  class="quote-content">All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers and posters will be primarily based on the potential to generate discussion and impact future research directions. Accepted papers will be included in the ICHI 2018 Proceedings and IEEE Digital Library. Plans are underway to also invite authors of selected papers to publish an extended version of their work in a special issue of BMC Medical Informatics and Decision Making journal.</p>
                     </div>
                 </div>
@@ -202,7 +201,7 @@
                                 <td>
                                     <ul class="quote-content" style="padding-left:0; list-style: none; margin-top:-20px">
                                         <li><h3 style="font-size: 22px;margin-left:20px;color:#fff">Hua Xu<a class="contact-a" href="mailto:Hua.Xu@uth.tmc.edu">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;email me</a></h3></li>
-                                        <li><h3 style="font-size: 22px;margin-left:20px;color:#fff">VG Vinod Vydiswaran<a class="contact-a" href="mailto:vgvinodv@umich.edu">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;email me</a></h3></li>
+                                        <li><h3 style="font-size: 22px;margin-left:20px;color:#fff">V.G.Vinod Vydiswaran<a class="contact-a" href="mailto:vgvinodv@umich.edu">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;email me</a></h3></li>
                                     </ul>
                                 </td>
                             </tr>
