force to break the title for alignment

--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -91,7 +91,9 @@
         <div id="text" class="widget widget-description">
             <div class="container">
                 <div class="col-md-8 col-md-push-2">
-                    <h2 class="widget-heading">The first International Workshop on Health Natural Language Processing (HealthNLP 2018)</h2>
+                    <h2 class="widget-heading">The first International Workshop on </h2>
+                    <h2 class="widget-heading">Health Natural Language Processing</h2>
+                    <h2 class="widget-heading">(HealthNLP 2018)</h2>
                     <h3 class="widget-sub-heading">Organized in conjunction with IEEE ICHI 2018</h3>
                     <h3 class="widget-sub-heading">June 4th, 2018, New York City, USA</h3>
                 </div>
