--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -152,6 +152,58 @@
                         <li>Yanshan Wang, PhD, Mayo Clinic, US</li>
                     </ul>
 
+                    <p class="quote-content"><strong><span style="text-decoration: underline;">Program committee: </span></strong></p>
+                    <ul class="quote-content">
+                        <li>Hua Xu, University of Texas Health Science Center at Houston</li>
+                        <li>V.G.Vinod Vydiswaran, University of Michigan</li>
+                        <li>Yaoyun Zhang, University of Texas Health Science Center at Houston</li>
+                        <li>Yonghui Wu, University of Florida</li>
+                        <li>Tanmay Basu, Ramakrishna Mission, Vivekananda University</li>
+                        <li>Cheryl Clark, MITRE</li> 
+                        <li>John Aberdeen, MITRE</li> 
+                        <li>Hercules Dalianis, DSV-Stockholm University</li> 
+                        <li>Eneida Mendonca, University of Wisconsin-Madisonordinary</li>
+                        <li>Feifan Liu, University of Massachusetts</li>
+                        <li>Tomoko Ohkuma, Fuji xerox co., Ltd.</li>
+                        <li>Samir Abdelrahman, University of Utah</li>
+                        <li>Kunli Zhang, Zhengzhou University</li>
+                        <li>Isabel Segura Bedmar, Universidad Carlos III de Madrid</li>
+                        <li>Li Zhou, Brigham and Women's Hospital</li>
+                        <li>Kevin Bretonnel Cohen, University of Colorado</li> 
+                        <li>Zhiyong Lu, NCBI</li>
+                        <li>Stéphane Meystre, Medical University of South Carolina</li>
+                        <li>Lynette Hirschman, MITRE</li>
+                        <li>Mike Conway, University of Utah</li>
+                    <li>Ozlem Uzuner, George Mason University</li>
+                    <li>Alberto Lavelli, FBK-irst</li>
+                    <li>Zhihao Yang, Dalian university of technology</li>
+                    <li>Trevor Cohen, University of Texas Health Science Center at Houston</li>
+                    <li>Dimitrios Kokkinakis, University of Gothenburg</li>
+                    <li>Dina Demner, U.S. National Library of Medicine, NIH</li>
+                    <li>Tong Ruan, ECUST</li>
+                    <li>Eiji Aramaki, NAIST</li>
+                    <li>Wei Wang, University of California, Los Angeles</li>
+                    <li>Jon Patrick, Health Language Analytics Global</li>
+                    <li>Deyu Zhou, Southeast University</li>
+                    <li>Yoshinobu Kano, Shizuoka University</li>
+                    <li>Chun-Nan Hsu, University of California San Diego</li>
+                    <li>Min Song, Yonsei University</li>
+                    <li>Zhengxing Huang, Zhejiang University</li>
+                    <li>Jiao Li, Chinese Academy of Medical Sciences</li>
+                    <li>Karin Verspoor, The University of Melbourne</li>
+                    <li>Buzhou Tang, Shenzhen Graduate School, Harbin Institute of Technology</li>
+                    <li>Rohit Kate, Univeristy of Wisconsin-Milwaukee</li>
+                    <li>Stephen Johnson, Weill Cornell Medicine</li>
+                    <li>Stefan Schulz, Institute of Medical Informatics, Statistics, and Documentation, Medical University of Graz</li>
+                    <li>Scott Duvall, Veterans Affairs</li>
+                    <li>Cyril Grouin, LIMSI, CNRS, Université Paris-Saclay</li>
+                    <li>Wendy Chapman, University of Utah</li>
+                    <li>Jung-Wei Fan, Kaiser Permanente</li>
+                    <li>Yanshan Wang, Mayo Clinic</li>
+                </ul>
+
+                <div align="center"><p class="quote-content">More to be updated...<p></div>
+
                 </div>
             </div>
         </div>
