1. change date from June 4th to June 7th;
2. add 2 pc members;

--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -95,7 +95,7 @@
                     <h2 class="widget-heading">Health Natural Language Processing</h2>
                     <h2 class="widget-heading">(HealthNLP 2018)</h2>
                     <h3 class="widget-sub-heading">Organized in conjunction with IEEE ICHI 2018</h3>
-                    <h3 class="widget-sub-heading">June 4th, 2018, New York City, USA</h3>
+                    <h3 class="widget-sub-heading">June 7th, 2018, New York City, USA</h3>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="widget-header">
                     <h2 class="widget-body">Introduction</h2>
- <p class="quote-content">Natural Language Processing (NLP) technologies have received significant attention in the medical domain and have demonstrated numerous successful uses in healthcare applications. The 2018 HealthNLP workshop will provide a unique platform for close interactions among students, scholars, and industry professionals who are interested in NLP over health data such as clinical notes, social media, and biomedical literature. This new workshop will be held in conjunction with the IEEE International Conference on Healthcare Informatics in New York City on June 4th, 2018.</p>
+ <p class="quote-content">Natural Language Processing (NLP) technologies have received significant attention in the medical domain and have demonstrated numerous successful uses in healthcare applications. The 2018 HealthNLP workshop will provide a unique platform for close interactions among students, scholars, and industry professionals who are interested in NLP over health data such as clinical notes, social media, and biomedical literature. This new workshop will be held in conjunction with the IEEE International Conference on Healthcare Informatics in New York City on June 7th, 2018.</p>
 
 <p class="quote-content">HealthNLP 2018 invites papers and abstracts about original research and works in progress in natural language processing over health data, focusing on methods, tools, and applications. All submitted papers and abstracts will be peer-reviewed, and selected papers and abstracts will be featured as oral / poster presentations at the workshop. The day-long workshop will also feature a keynote speech and a roundtable discussion. </p>
                 </div>
@@ -166,6 +166,7 @@
                         <li>Hercules Dalianis, DSV-Stockholm University</li>
                         <li>Dina Demner, U.S. National Library of Medicine, NIH</li>
                         <li>Scott Duvall, Veterans Affairs</li>
+                        <li>Carsten Eickhoff, Brown University</li>
                         <li>Jung-Wei Fan, Kaiser Permanente</li>
                         <li>Cyril Grouin, LIMSI, CNRS, Université Paris-Saclay</li>
                         <li>Lynette Hirschman, MITRE</li>
@@ -200,6 +201,7 @@
                         <li>Yaoyun Zhang, University of Texas Health Science Center at Houston</li>
                         <li>Deyu Zhou, Southeast University</li>
                         <li>Li Zhou, Brigham and Women's Hospital</li>
+                        <li>Vivienne Zhu, The Medical University of South Carolina</li>
                 </ul>
 
                 <div align="center"><p class="quote-content">More to be updated...<p></div>
@@ -218,7 +220,7 @@
                           <li>Deadline for all submissions: <strong>April 5<sup>th</sup>, 2018</strong></li>
                           <li>Notification of decisions: <strong>April 20<sup>th</sup>, 2018</strong></li>
                           <li>Camera-ready submissions: <strong>May 7<sup>th</sup>, 2018</strong></li>
-                          <li>Workshop date: <strong>June 4<sup>th</sup>, 2018</strong></li>
+                          <li>Workshop date: <strong>June 7<sup>th</sup>, 2018</strong></li>
                         </ul>
                     </div>
                 </div>
