add Chunhua Weng to the committee;

--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -194,6 +194,7 @@
                         <li>V.G.Vinod Vydiswaran, University of Michigan</li>
                         <li>Wei Wang, University of California, Los Angeles</li>
                         <li>Yanshan Wang, Mayo Clinic</li>
+                        <li>Chunhua Weng, Columbia University</li>
                         <li>Yonghui Wu, University of Florida</li>
                         <li>Hua Xu, University of Texas Health Science Center at Houston</li>
                         <li>Zhihao Yang, Dalian university of technology</li>
