best paper award added;

--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -56,6 +56,7 @@
 <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item home"><a href="#">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="#introduction">Introduction</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page agenda"><a href="#agenda">Agenda</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page award"><a href="#award">Best Paper Award</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page topics"><a href="#topics">Topics</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="#organization">Organizers</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="#dates">Important dates</a></li>
@@ -126,6 +127,15 @@
         </div>
 
 
+        <!-- topic of award -->
+        <div id="award" class="widget widget-speakers">
+            <div class="container">
+                <div class="widget-header">
+                    <h2 class="widget-body">Best Paper Award</h2>
+ <p class="quote-content">Thanks to the support from <a href="http://www.meddataquest.com/" >Med Data Quest (MDQ), San Diego, California</a>, we will announce an award of the best paper of HealthNLP 2018 at the workshop. The winner will receive a cash award of $500. </p>
+                </div>
+            </div>
+        </div>
 
 
 
