keynote speaker added

--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -57,10 +57,9 @@
 <li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="#introduction">Introduction</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page agenda"><a href="#agenda">Agenda</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page award"><a href="#award">Best Paper Award</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page keynote"><a href="#keynote">Keynote Speaker</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page topics"><a href="#topics">Topics</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="#organization">Organizers</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="#dates">Important dates</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="#submissions">Submissions</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="#contact">Contact Us</a></li>
                         </ul>
                     </div>
@@ -112,6 +111,9 @@
                 </div>
             </div>
         </div>
+        
+        
+
         <!--Agenda-->
         <div id="agenda" class="widget widget-speakers">
             <div class="container">
@@ -133,6 +135,27 @@
                 <div class="widget-header">
                     <h2 class="widget-body">Best Paper Award</h2>
  <p class="quote-content">Thanks to the support from <a href="http://www.meddataquest.com/" >Med Data Quest (MDQ), San Diego, California</a>, we will announce an award of the best paper of HealthNLP 2018 at the workshop. The winner will receive a cash award of $500. </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- topic of keynote -->
+        <div id="keynote" class="widget widget-speakers">
+            <div class="container">
+                <div class="widget-header">
+                    <h2 class="widget-body">Keynote speaker</h2>
+ <p class="quote-content"> <a href="http://www.hla-global.com/staff/professor-jon-patrick/">Professor Jon Patrick</a> is the co-founder and CEO of HLA, which later become HLA-Global, in 2012. Jon has held many academic positions in his career, most recently the Chair of Information Systems at Sydney University from 1998-2002, and then transferred to the Chair of Language Technology from 2002-2012. In 2012, he left the University to develop his research ideas at HLA; although he still holds an Honorary appointment at Sydney.</p>
+
+ <p class="quote-content">In 2005, he won the national Australian Computer Society Eureka Prize for ICT Innovation for his Scamseek project, a system built for the Australian Securities and Investment Commission (ASIC) to identify financial scams on the Internet. Since then, he has applied his expertise to language used in clinical documentation and demonstrated many innovations in advanced processing of clinical documents. In 2010, his team won the international i2b2 Challenge for clinical language processing and has ranked amongst the top teams since.</p>
+
+
+ <p class="quote-content"><strong>Title:</strong> Language Engineering: Transitions from Research to Industrial NLP</p>
+
+ <p class="quote-content"><strong>Abstract:</strong> </p>
+ <p class="quote-content">The field of Clinical NLP (CNLP) is dominated by research groups in various hospital and university settings producing investigations for publication or processing systems for local usage. The processing power of these systems are characterised to various levels of complexity by various combinations of small sample sizes, small processing objectives, single source of data, and single purpose utilisation. These systems do not migrate well to larger scale problems where the variety of authors, collection systems, content, and processing objectives are much greater. </p> 
+ <p class="quote-content">Language Engineering (LE) is defined as the process of moving Statistical NLP as performed in the research setting into a context where the scale of complexity is much larger on all the various variables. The core objective is to achieve as high an accuracy as the client demands for Clinical Concept Recognition, which is then used for serving the true user objectives, such as clinical coding, document workflow management, case identification, etc. </p>
+ <p class="quote-content">An essential process for LE is to develop highly efficient methods for creating the operational system. This requires rapid development of training materials, efficient evaluation of trained language models against the training materials, domain knowledge to direct algorithm development for the pre-processing NLP pipelines and the post-processing which the Clinical Concept Recogniser is intended to serve. These requirements drive a different perspective on the essential requirements for an SNLP pipeline where standard assessment such as 10-fold cross validation has little practical value, where attention to minutiae of processing is vital to achieving project accuracy requirements, and keeping the client properly informed is essential to maintaining their engagement in the project.  These principles will be elucidated in a case study for building an automated pathology report coding system for the California Cancer Registry. The beginnings of a workbench to embody these principles have been established in the CLEW project (Clinical Language Engineering Workbench) being developed by the CDC.</p>
+
                 </div>
             </div>
         </div>
