--- a/healthnlp2018.html
+++ b/healthnlp2018.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="./images/logo.ico">
     <link rel="stylesheet" href="./css/style.css" media="all">
     <!-- This site is optimized with the Yoast WordPress SEO Premium plugin v2.2.1 - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Health NLP 2018</title>
+    <title>Health NLP 2019</title>
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:title" content="NLP WG Pre-symposium 2017">
@@ -46,7 +46,7 @@
     <header class="nav header">
         <div class="header-container">
             <a href="" id="logo" class="header-logo">
-                <img class="header-logo-img" src="./images/healthNLP2018.png" alt="HealthNLP 2018" title="HealthNLP 2018">
+                <img class="header-logo-img" src="./images/BJ.png" alt="HealthNLP 2019" title="HealthNLP 2019">
             </a>
             <nav class="navbar" role="navigation">
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -94,9 +94,9 @@
                 <div class="col-md-8 col-md-push-2">
                     <h2 class="widget-heading">The first International Workshop on </h2>
                     <h2 class="widget-heading">Health Natural Language Processing</h2>
-                    <h2 class="widget-heading">(HealthNLP 2018)</h2>
-                    <h3 class="widget-sub-heading">Organized in conjunction with IEEE ICHI 2018</h3>
-                    <h3 class="widget-sub-heading">June 7th, 2018, New York City, USA</h3>
+                    <h2 class="widget-heading">(HealthNLP 2019)</h2>
+                    <h3 class="widget-sub-heading">Organized in conjunction with IEEE ICHI 2019</h3>
+                    <h3 class="widget-sub-heading">June 7th, 2019, New York City, USA</h3>
                 </div>
             </div>
         </div>
@@ -105,9 +105,9 @@
             <div class="container">
                 <div class="widget-header">
                     <h2 class="widget-body">Introduction</h2>
- <p class="quote-content">Natural Language Processing (NLP) technologies have received significant attention in the medical domain and have demonstrated numerous successful uses in healthcare applications. The 2018 HealthNLP workshop will provide a unique platform for close interactions among students, scholars, and industry professionals who are interested in NLP over health data such as clinical notes, social media, and biomedical literature. This new workshop will be held in conjunction with the IEEE International Conference on Healthcare Informatics in New York City on June 7th, 2018.</p>
+ <p class="quote-content">Natural Language Processing (NLP) technologies have received significant attention in the medical domain and have demonstrated numerous successful uses in healthcare applications. The 2019 HealthNLP workshop will provide a unique platform for close interactions among students, scholars, and industry professionals who are interested in NLP over health data such as clinical notes, social media, and biomedical literature. This new workshop will be held in conjunction with the IEEE International Conference on Healthcare Informatics in New York City on June 7th, 2019.</p>
 
-<p class="quote-content">HealthNLP 2018 invites papers and abstracts about original research and works in progress in natural language processing over health data, focusing on methods, tools, and applications. All submitted papers and abstracts will be peer-reviewed, and selected papers and abstracts will be featured as oral / poster presentations at the workshop. The day-long workshop will also feature a keynote speech and a roundtable discussion. </p>
+<p class="quote-content">HealthNLP 2019 invites papers and abstracts about original research and works in progress in natural language processing over health data, focusing on methods, tools, and applications. All submitted papers and abstracts will be peer-reviewed, and selected papers and abstracts will be featured as oral / poster presentations at the workshop. The day-long workshop will also feature a keynote speech and a roundtable discussion. </p>
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
             <div class="container">
                 <div class="widget-header">
                     <h2 class="widget-body">Best Paper Award</h2>
- <p class="quote-content">Thanks to the support from <a href="http://www.meddataquest.com/" >Med Data Quest (MDQ), San Diego, California</a>, we will announce an award of the best paper of HealthNLP 2018 at the workshop. The winner will receive a cash award of $500. </p>
+ <p class="quote-content">Thanks to the support from <a href="http://www.meddataquest.com/" >Med Data Quest (MDQ), San Diego, California</a>, we will announce an award of the best paper of HealthNLP 2019 at the workshop. The winner will receive a cash award of $500. </p>
                 </div>
             </div>
         </div>
@@ -269,10 +269,10 @@
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
                         <ul class="quote-content">
-                          <li>Deadline for all submissions: <strong>April 12<sup>th</sup>, 2018</strong></li>
-                          <li>Notification of decisions: <strong>April 27<sup>th</sup>, 2018</strong></li>
-                          <li>Camera-ready submissions: <strong>May 14<sup>th</sup>, 2018</strong></li>
-                          <li>Workshop date: <strong>June 7<sup>th</sup>, 2018</strong></li>
+                          <li>Deadline for all submissions: <strong>April 12<sup>th</sup>, 2019</strong></li>
+                          <li>Notification of decisions: <strong>April 27<sup>th</sup>, 2019</strong></li>
+                          <li>Camera-ready submissions: <strong>May 14<sup>th</sup>, 2019</strong></li>
+                          <li>Workshop date: <strong>June 7<sup>th</sup>, 2019</strong></li>
                         </ul>
                     </div>
                 </div>
@@ -286,8 +286,8 @@
                 <div class="widget-header">
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Submission and Review</h2>
-                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://easychair.org/conferences/?conf=healthnlp2018" target="_blank">https://easychair.org/conferences/?conf=healthnlp2018</a></span>). For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html" >link here</a></span>).</p>
-<p  class="quote-content">All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers and posters will be primarily based on the potential to generate discussion and impact future research directions. Accepted papers will be included in the ICHI 2018 Proceedings and IEEE Digital Library. Plans are underway to also invite authors of selected papers to publish an extended version of their work in a special issue of BMC Medical Informatics and Decision Making journal.</p>
+                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://easychair.org/conferences/?conf=healthnlp2019" target="_blank">https://easychair.org/conferences/?conf=healthnlp2019</a></span>). For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html" >link here</a></span>).</p>
+<p  class="quote-content">All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers and posters will be primarily based on the potential to generate discussion and impact future research directions. Accepted papers will be included in the ICHI 2019 Proceedings and IEEE Digital Library. Plans are underway to also invite authors of selected papers to publish an extended version of their work in a special issue of BMC Medical Informatics and Decision Making journal.</p>
                     </div>
                 </div>
             </div>
