Update and rename Health NLP 2019.html to healthnlp2019.html

--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -203,7 +203,7 @@
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Call for Papers</h2>
                         <ul class="quote-content">
-                            <a href="https://jingqihit.github.io/HealthNLP2019/CallForPapers_HealthNLP2019.docx">Download Here.</a>
+                            <a href="https://ohnlp.github.io/HealthNLP2019/CallForPapers_HealthNLP2019.docx">Download Here.</a>
                         </ul>
                     </div>
                 </div>
