--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -44,7 +44,7 @@
 <body class="home blog header-sticky">
     <header class="nav header sticky">
         <div class="header-container">
-            <a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019" id="logo" class="header-logo">
+            <a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019" id="logo" class="header-logo">
                 <img class="header-logo-img" src="./Health NLP 2019_files/healthNLP2019.png" alt="HealthNLP 2019" title="HealthNLP 2019">
             </a>
             <nav class="navbar" role="navigation">
@@ -75,7 +75,7 @@
             <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
                 <div class="carousel-inner" role="listbox" id="item-img">
                     <div class="item active">
-                        <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2019_files/BJ.png" alt="">
+                        <img class="hero-carousel" style="height: 40%; width: 60%; margin: auto" src="./Health NLP 2019_files/BJ.png" alt="">
                     </div>
                     <!-- div class="item">
                         <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/NY2.png" alt>
@@ -237,7 +237,7 @@
                 <div class="widget-header">
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Submission and Review</h2>
-                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://www.easychair.org/conferences/?conf=ichi2019" target="_blank">https://www.easychair.org/conferences/?conf=ichi2019</a></span>). For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html">link here</a></span>).</p>
+                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://www.easychair.org/conferences/?conf=ichi2019" target="_blank">https://www.easychair.org/conferences/?conf=ichi2019</a></span>) using HealthNLP 2019 track. For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html">link here</a></span>).</p>
 <p class="quote-content">All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers and posters will be primarily based on the potential to generate discussion and impact future research directions. Accepted papers will be included in the ICHI 2019 Proceedings and IEEE Digital Library. Plans are underway to also invite authors of selected papers to publish an extended version of their work in a special issue of BMC Medical Informatics and Decision Making journal.</p>
                     </div>
                 </div>
