--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -52,18 +52,18 @@
                 <div class="collapse navbar-collapse" id="tyler-navigation">
                     <div class="menu-current-container">
                         <ul id="menu-prmiary" class="navbar-menu">
-<li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item home"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#introduction">Introduction</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page audience"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#audience">Audience</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page publicity"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#publicity">Publicity</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page structure"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#structure">Workshop Structure</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page reviewing"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#reviewing">Reviewing</a></li>
+<li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item home"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#">Home</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#introduction">Introduction</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page audience"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#audience">Audience</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page publicity"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#publicity">Publicity</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page structure"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#structure">Workshop Structure</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page reviewing"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#reviewing">Reviewing</a></li>
 
-<li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#organization">Organizers</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children callfor"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#callfor">Call for Papers</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#dates">Important dates</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#submissions">Submissions</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#contact">Contact Us</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#organization">Organizers</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children callfor"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#callfor">Call for Papers</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#dates">Important dates</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#submissions">Submissions</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#contact">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
@@ -221,8 +221,8 @@
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
                         <ul class="quote-content">
-                          <li>Deadline for all submissions: <strong>April 5<sup>th</sup>, 2019</strong></li>
-                          <li>Notification of decisions: <strong>April 25<sup>th</sup>, 2019</strong></li>
+                          <li>Deadline for all submissions: <strong>March 25<sup>th</sup>, 2019</strong></li>
+                          <li>Notification of decisions: <strong>April 15<sup>th</sup>, 2019</strong></li>
                           <li>Workshop date: <strong>June 10<sup>th</sup>, 2019</strong></li>
                         </ul>
                     </div>
@@ -281,7 +281,7 @@
     <script type="text/javascript" src="./Health NLP 2019_files/wp-embed.min.js"></script>
     <!-- SCROLL UP BTN -->
     <div id="scroll">
-        <a href="https://jingqihit.github.io/HealthNLP2019/healthnlp2019#" id="scroll-up" style="display: none;"><img src="./Health NLP 2019_files/scrollup.png" alt="">TOP</a>
+        <a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019#" id="scroll-up" style="display: none;"><img src="./Health NLP 2019_files/scrollup.png" alt="">TOP</a>
     </div>
 
 
